--- a/modules/wp_plugin-info/composer.json
+++ b/modules/wp_plugin-info/composer.json
@@ -1,14 +1,15 @@
 {
-    "name":        "josantonius/wp_plugin-rating",
+    "name":        "josantonius/wp_plugin-info",
     "version":     "1.0.0",
-    "description": "Show plugin rating in WordPress administration pages for plugins developed with Eliasis Framework.",
+    "description": "Get and save plugin information from WordPress API to be consumed by other modules.",
     "type": "eliasis-module",
     "keywords": [
-        "Wordpress", 
+        "WordPress", 
         "Plugin", 
         "Eliasis",
         "Component",
-        "Rating",
+        "Info",
+        "WordPress-API",
         "PHP",
         "HHVM"
     ],
@@ -27,21 +28,18 @@
     },
     "minimum-stability": "dev",
     "support": {
-        "issues": "https://github.com/Josantonius/wp_plugin-rating/issues",
-        "forum": "http://stackoverflow.com/tags/wp_plugin-rating",
-        "source": "https://github.com/Josantonius/wp_plugin-rating"
+        "issues": "https://github.com/Josantonius/wp_plugin-info/issues",
+        "forum": "http://stackoverflow.com/tags/wp_plugin-info",
+        "source": "https://github.com/Josantonius/wp_plugin-info"
     },
     "require": {
         "php": "^5.3 || ^7.0",
         "eliasis-framework/eliasis"    : "^1.0.9",
-        "Josantonius/WP_Register"      : "^1.0.1",
-        "Josantonius/Hook"             : "^1.0.4",
-        "Josantonius/WP_Plugin-Info"   : "^1.0.0",
         "composer/installers"          : "^1.3.0"
     },
     "autoload": {
         "psr-4": {
-            "Eliasis\\Modules\\WP_Plugin_Rating\\" : "src/"
+            "Eliasis\\Modules\\WP_Plugin_Info\\" : "src/"
         }
     }
 }
