--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,5 @@ phpcs.xml export-ignore
 phpunit.xml export-ignore
 phpmd.xml export-ignore
 .php_cs.dist export-ignore
+package.json export-ignore
+gulpfile.js export-ignore
