--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ docs/_build
 docs/*.pyc
 plugins/
 .git*/
+node_modules/
+
 .idea
 .DS_STORE
 branches/
@@ -20,3 +22,4 @@ svn-prop.tmp
 versions/
 .php_cs.cache
 grumphp.yml
+package-lock.json
