--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
 /tests export-ignore
 /src/bootstrap.php export-ignore
+/public/css/source export-ignore
+/public/sass export-ignore
+/public/css/wp-plugin-rating.css.min.map export-ignore
 /vendor export-ignore
+/resources export-ignore
 /bin export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
