--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "PHP",
         "HHVM"
     ],
-    "license": "GPL-2.0+",
+    "license": "MIT",
     "authors": [
         {
             "name":     "Josantonius",
