Updated to version 1.0.1

--- a/composer.json
+++ b/composer.json
@@ -71,9 +71,9 @@
         ],
         "tests": [
             "clear",
+            "@phpunit",
             "@phpmd",
-            "@phpcs",
-            "@phpunit"
+            "@phpcs"
         ]
     }
 }
