--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 /tests export-ignore
+/public export-ignore
+/public/css/public export-ignore
 /src/bootstrap.php export-ignore
 /public/css/source export-ignore
 /public/sass export-ignore
